Add test cases - for EmailContainsKeywordsPredicate - for CombinedContainsKeywordsPredicate